--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔥 MEGA Risk Management System 🔥</title>
+    <title>GPS/Maps API </title>
     <style>
         * {
             margin: 0;
@@ -777,29 +777,39 @@
     <div class="scan-wave" style="animation-delay: 2s;"></div>
 
     <!-- Data Streams -->
-    <div class="data-stream" style="top: 15%;">SECURITY_CHECK: SCANNING_API_ENDPOINTS... [████████░░] 80% COMPLETE</div>
-    <div class="data-stream" style="top: 35%; animation-delay: 3s;">AUTHENTICATION: 2FA_PROTOCOL_VERIFIED... STATUS: ✓ SECURE</div>
-    <div class="data-stream" style="top: 55%; animation-delay: 6s;">ENCRYPTION: TLS_1.3_ENABLED... AES-256_ACTIVE... [OK]</div>
-    <div class="data-stream" style="top: 75%; animation-delay: 9s;">MONITORING: SIEM_ONLINE... THREAT_LEVEL: MEDIUM... SCANNING...</div>
+    <div class="data-stream" style="top: 15%;">GPS_TRACKING: MONITORING_DRIVER_LOCATIONS... [████████░░] 85% ACCURACY</div>
+    <div class="data-stream" style="top: 35%; animation-delay: 3s;">GOOGLE_MAPS_API: QUOTA_CHECK... STATUS: ✓ WITHIN_LIMITS</div>
+    <div class="data-stream" style="top: 55%; animation-delay: 6s;">YANDEX_CLOUD: CACHE_SYSTEM_ACTIVE... SAUDI_MAPS_READY... [OK]</div>
+    <div class="data-stream" style="top: 75%; animation-delay: 9s;">SMS_NOTIFICATIONS: SATTAHA_OPERATORS_ONLINE... LATENCY: 2.3s... OPTIMAL</div>
 
     <!-- Radar Scanner -->
     <div class="radar"></div>
 
     <!-- Threat Level Indicator -->
     <div class="threat-indicator">
-        ⚠️ THREAT LEVEL: HIGH<br>
-        🔒 SECURITY SCAN: ACTIVE
+        ⚠️ API STATUS: MONITORING<br>
+        📍 GPS SYSTEM: ACTIVE
     </div>
 
     <!-- Cursor Trail -->
     <div class="cursor-trail" id="cursorTrail"></div>
 
+    <!-- Background Music -->
+    <audio id="backgroundMusic" autoplay loop>
+        <source src="background_music.mp3" type="audio/mpeg">
+    </audio>
+
+    <!-- Music Control Button -->
+    <button id="musicToggle" style="position: fixed; bottom: 20px; right: 20px; z-index: 9999; background: linear-gradient(135deg, #667eea, #764ba2); border: 2px solid #00ffff; color: white; padding: 15px 20px; border-radius: 50px; cursor: pointer; font-weight: bold; box-shadow: 0 0 20px rgba(0, 255, 255, 0.6); transition: all 0.3s;">
+        🔊 MUSIC ON
+    </button>
+
     <div class="container">
         <div class="header">
             <h1 class="glitch">УПРАВЛЕНИЕ РИСКАМИ</h1>
-            <div class="subtitle">⚡ ADVANCED RISK CONTROL SYSTEM ⚡</div>
+            <div class="subtitle">⚡ ADVANCED RISK  ⚡</div>
             <div class="risk-badge">
-                🔐 РИСК № 13: УЯЗВИМОСТИ БЕЗОПАСНОСТИ
+                📍 РИСК № 11: СБОЙ GPS/MAPS API
             </div>
         </div>
 
@@ -817,14 +827,14 @@
                 <thead>
                     <tr>
                         <th>№</th>
-                        <th>КОНТРОЛЬНЫЙ ПУНКТ <span class="status-badge status-pending">PENDING</span></th>
+                        <th>КОНТРОЛЬНЫЙ ЛИСТ <span class="status-badge status-pending">PENDING</span></th>
                         <th>Выполнено</th>
                     </tr>
                 </thead>
                 <tbody id="checklistBody">
                     <tr data-index="0">
                         <td>1</td>
-                        <td>Проведён аудит безопасности всех API-эндпоинтов (проверка на SQL-инъекции, XSS, CSRF)</td>
+                        <td>Проверен лимит Google Maps API (квота достаточна для GPS-сопоставления водителей и клиентов)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -833,7 +843,7 @@
                     </tr>
                     <tr data-index="1">
                         <td>2</td>
-                        <td>Внедрена двухфакторная аутентификация (2FA) для входа пользователей и администраторов</td>
+                        <td>Настроена система кэширования карт Саудовской Аравии на Yandex Cloud (для работы при временном сбое API)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -842,7 +852,7 @@
                     </tr>
                     <tr data-index="2">
                         <td>3</td>
-                        <td>Настроено шифрование данных при передаче (SSL/TLS сертификаты с минимум TLS 1.2)</td>
+                        <td>Добавлен резервный вариант: ручной ввод адреса и районов при недоступности GPS</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -851,7 +861,7 @@
                     </tr>
                     <tr data-index="3">
                         <td>4</td>
-                        <td>Реализовано шифрование персональных данных и платёжной информации в базе данных (AES-256)</td>
+                        <td>Реализовано уведомление операторов Sattaha при потере GPS-сигнала (через SMS)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -860,7 +870,7 @@
                     </tr>
                     <tr data-index="4">
                         <td>5</td>
-                        <td>Внедрена система мониторинга и логирования подозрительных действий (SIEM или аналог)</td>
+                        <td>Проведено тестирование GPS-отслеживания в разных регионах Саудовской Аравии (города и пустыни)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -869,7 +879,7 @@
                     </tr>
                     <tr data-index="5">
                         <td>6</td>
-                        <td>Проведено тестирование на проникновение (penetration testing) внешним специалистом</td>
+                        <td>Настроен мониторинг стоимости использования Google Maps API (чтобы не превысить бюджет $100/месяц)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -878,7 +888,7 @@
                     </tr>
                     <tr data-index="6">
                         <td>7</td>
-                        <td>Настроены регулярные обновления зависимостей и библиотек (автоматическая проверка уязвимостей)</td>
+                        <td>Сохраняется последняя известная локация эвакуатора для отображения клиенту при сбое</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -887,7 +897,7 @@
                     </tr>
                     <tr data-index="7">
                         <td>8</td>
-                        <td>Внедрена система управления доступом с принципом минимальных привилегий (RBAC)</td>
+                        <td>Создана инструкция для команды: что делать при полном отказе Google Maps API</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -896,7 +906,7 @@
                     </tr>
                     <tr data-index="8">
                         <td>9</td>
-                        <td>Подготовлен план реагирования на инциденты безопасности (incident response plan)</td>
+                        <td>Протестирована работа GPS при слабом мобильном интернете (3G в отдалённых районах)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -905,7 +915,7 @@
                     </tr>
                     <tr data-index="9">
                         <td>10</td>
-                        <td>Обеспечено соответствие требованиям защиты персональных данных (152-ФЗ, GDPR если применимо)</td>
+                        <td>Настроено автоматическое переключение на базовые координаты при ошибке API (показ ближайших доступных эвакуаторов)</td>
                         <td>
                             <div class="checkbox-container">
                                 <span class="checkbox" onclick="toggleCheck(this)"></span>
@@ -917,10 +927,10 @@
         </div>
 
         <div class="footer">
-            <p>🔒 КОНТРОЛЬНЫЙ ЛИСТ ПО УПРАВЛЕНИЮ РИСКАМИ | СЕРВИС ЭВАКУАЦИИ АВТОМОБИЛЕЙ</p>
-            <p>⚡ KAZAN FEDERAL UNIVERSITY | ADVANCED RISK MANAGEMENT SYSTEM ⚡</p>
+            <p>📍 КОНТРОЛЬНЫЙ ЛИСТ ПО УПРАВЛЕНИЮ РИСКАМИ | ПЛАТФОРМА HAMMILHA</p>
+            <p>⚡ KAZAN FEDERAL UNIVERSITY | ADVANCED RISK  ⚡</p>
             <p style="margin-top: 10px; font-size: 0.9em; opacity: 0.8;">
-                Powered by Advanced Security Protocols & Real-Time Monitoring
+                Powered by GPS Tracking & Real-Time Monitoring | Saudi Arabia
             </p>
         </div>
     </div>
@@ -1030,6 +1040,63 @@
             createMatrixRain();
             animateCursor();
             updateProgress();
+        });
+
+        // Music Control
+        const musicToggle = document.getElementById('musicToggle');
+        const backgroundMusic = document.getElementById('backgroundMusic');
+        let isMusicPlaying = false;
+
+        // Set volume
+        backgroundMusic.volume = 0.5;
+
+        // Force play music on any user interaction
+        const startMusic = () => {
+            if (!isMusicPlaying) {
+                backgroundMusic.play().then(() => {
+                    isMusicPlaying = true;
+                    musicToggle.textContent = '🔊 MUSIC ON';
+                    musicToggle.style.background = 'linear-gradient(135deg, #667eea, #764ba2)';
+                }).catch(() => {
+                    console.log('Autoplay blocked, click to play');
+                });
+            }
+        };
+
+        // Try to autoplay immediately
+        backgroundMusic.play().then(() => {
+            isMusicPlaying = true;
+            musicToggle.textContent = '🔊 MUSIC ON';
+        }).catch(() => {
+            isMusicPlaying = false;
+            musicToggle.textContent = '🔇 CLICK TO PLAY';
+            // Add click listener to start music on first user interaction
+            document.body.addEventListener('click', startMusic, { once: true });
+        });
+
+        musicToggle.addEventListener('click', (e) => {
+            e.stopPropagation(); // Prevent triggering body click
+            if (isMusicPlaying) {
+                backgroundMusic.pause();
+                musicToggle.textContent = '🔇 MUSIC OFF';
+                musicToggle.style.background = 'linear-gradient(135deg, #333, #555)';
+            } else {
+                backgroundMusic.play();
+                musicToggle.textContent = '🔊 MUSIC ON';
+                musicToggle.style.background = 'linear-gradient(135deg, #667eea, #764ba2)';
+            }
+            isMusicPlaying = !isMusicPlaying;
+        });
+
+        // Add hover effect to music button
+        musicToggle.addEventListener('mouseenter', () => {
+            musicToggle.style.transform = 'scale(1.1)';
+            musicToggle.style.boxShadow = '0 0 30px rgba(0, 255, 255, 0.9)';
+        });
+
+        musicToggle.addEventListener('mouseleave', () => {
+            musicToggle.style.transform = 'scale(1)';
+            musicToggle.style.boxShadow = '0 0 20px rgba(0, 255, 255, 0.6)';
         });
     </script>
 </body>
